SET(CFLOW_src 
            ${SRCLIBCFLOW}/cflow_pf_init.c
            ${SRCLIBCFLOW}/cflow_lib_ipc.c
            ${SRCLIBCFLOW}/convtbl.c
            ${SRCLIBCFLOW}/ft.c
            ${SRCLIBCFLOW}/pf_rec.c
            ${SRCLIBCFLOW}/run_ipfsrv.c
)
INCLUDE_DIRECTORIES(../include)
ADD_LIBRARY(${CFLOWLIB} STATIC ${CFLOW_src})

ADD_EXECUTABLE(${FINDOUTEXE} ${SRCLIBCFLOW}/findout.c)
TARGET_LINK_LIBRARIES(${FINDOUTEXE} ${CFLOWLIB} ${IPFLIB} ${IPCLIB})
INSTALL(TARGETS ${FINDOUTEXE} RUNTIME DESTINATION bin)

ADD_EXECUTABLE(${MIMICEXE} ${SRCLIBCFLOW}/mimic.c)
TARGET_LINK_LIBRARIES(${MIMICEXE} ${CFLOWLIB} ${IPFLIB} ${IPCLIB})
INSTALL(TARGETS ${MIMICEXE} RUNTIME DESTINATION bin)

ADD_EXECUTABLE(${PVCURVEEXE} ${SRCLIBCFLOW}/pvcurve.c)
TARGET_LINK_LIBRARIES(${PVCURVEEXE} ${CFLOWLIB} ${IPFLIB} ${IPCLIB})
INSTALL(TARGETS ${PVCURVEEXE} RUNTIME DESTINATION bin)

ADD_EXECUTABLE(${QVCURVEEXE} ${SRCLIBCFLOW}/qvcurve.c)
TARGET_LINK_LIBRARIES(${QVCURVEEXE} ${CFLOWLIB} ${IPFLIB} ${IPCLIB})
INSTALL(TARGETS ${QVCURVEEXE} RUNTIME DESTINATION bin)

ADD_EXECUTABLE(${LINEFLOWEXE} ${SRCLIBCFLOW}/lineflow.c)
TARGET_LINK_LIBRARIES(${LINEFLOWEXE} ${CFLOWLIB} ${IPFLIB} ${IPCLIB})
INSTALL(TARGETS ${LINEFLOWEXE} RUNTIME DESTINATION bin)

ADD_EXECUTABLE(${POSTPVCURVEEXE} ${SRCLIBCFLOW}/post_pvcurve.c)
TARGET_LINK_LIBRARIES(${POSTPVCURVEEXE} ${CFLOWLIB} ${IPFLIB} ${IPCLIB})
INSTALL(TARGETS ${POSTPVCURVEEXE} RUNTIME DESTINATION bin)
