# Add the source files
SET(IPFREPORTS_src ${SRCIPFREPORTS}/ipfrpt_main.c)

# Define the executable in terms of the source files
ADD_EXECUTABLE(${IPFREPORTSEXE} ${IPFREPORTS_src})

TARGET_LINK_LIBRARIES(${IPFREPORTSEXE} ${IPFLIB} ${IPFUTILLIB} ${IPCLIB})

IF(WIN32)
    SET(CMAKE_INSTALL_PREFIX "C:\\Program Files")
ELSE()
    SET(CMAKE_INSTALL_PREFIX /usr/local)
ENDIF(WIN32)
INSTALL(TARGETS ${IPFREPORTSEXE} RUNTIME DESTINATION bin)
