# Add the source files
SET(IPFTEST_src ${SRCIPFTEST}/ipf_test.c)

# Define the executable in terms of the source files
ADD_EXECUTABLE(${IPFTESTEXE} ${IPFTEST_src})

TARGET_LINK_LIBRARIES(${IPFTESTEXE} ${IPFLIB} ${IPFUTILLIB} ${IPCLIB})

IF(WIN32)
    SET(CMAKE_INSTALL_PREFIX "C:\\Program Files")
ELSE()
    SET(CMAKE_INSTALL_PREFIX /usr/local)
ENDIF(WIN32)
INSTALL(TARGETS ${IPFTESTEXE} RUNTIME DESTINATION bin)
