# Add the source files
SET(IPFPLOT_src ${SRCIPFPLOT}/ipfplot.c
                ${SRCIPFPLOT}/ipfplot_sub.c
)

# Define the executable in terms of the source files
ADD_EXECUTABLE(${IPFPLOTEXE} ${IPFPLOT_src})
INCLUDE_DIRECTORIES(${SRCIPF})
TARGET_LINK_LIBRARIES(${IPFPLOTEXE} ${IPFLIB} ${IPFUTILLIB} ${IPCLIB})

IF(WIN32)
    SET(CMAKE_INSTALL_PREFIX "C:\\Program Files")
ELSE()
    SET(CMAKE_INSTALL_PREFIX /usr/local)
ENDIF(WIN32)
INSTALL(TARGETS ${IPFPLOTEXE} RUNTIME DESTINATION bin)
