SET(LIBTSP_src 
              ${SRCLIBTSP}/angsol.f
              ${SRCLIBTSP}/area_frpt.f
              ${SRCLIBTSP}/auxout.f
              ${SRCLIBTSP}/badz.f
              ${SRCLIBTSP}/brksol.f
              ${SRCLIBTSP}/brnchy.f
              ${SRCLIBTSP}/brnchz.f
              ${SRCLIBTSP}/bus_frpt.f
              ${SRCLIBTSP}/busout.f
              ${SRCLIBTSP}/busplt.f
              ${SRCLIBTSP}/bussum.f
              ${SRCLIBTSP}/calplt.f
              ${SRCLIBTSP}/capital.f
              ${SRCLIBTSP}/cbelong.f
              ${SRCLIBTSP}/check_tc.f
              ${SRCLIBTSP}/chkbch.f
              ${SRCLIBTSP}/close_file.f
              ${SRCLIBTSP}/closts.f
              ${SRCLIBTSP}/cntrla.f
              ${SRCLIBTSP}/cntrl.f
              ${SRCLIBTSP}/copyc.f
              ${SRCLIBTSP}/copyd.f
              ${SRCLIBTSP}/copy.f
              ${SRCLIBTSP}/copyr.f
              ${SRCLIBTSP}/cpu_secs.f
              ${SRCLIBTSP}/cvinp.f
              ${SRCLIBTSP}/cvint.f
              ${SRCLIBTSP}/cvsol.f
              ${SRCLIBTSP}/dbgeko2.f
              ${SRCLIBTSP}/dbgeko.f
              ${SRCLIBTSP}/dbgfind.f
              ${SRCLIBTSP}/dbghere.f
              ${SRCLIBTSP}/dbgwrc.f
              ${SRCLIBTSP}/dbgwrcn.f
              ${SRCLIBTSP}/dbgwrf.f
              ${SRCLIBTSP}/dbgwrg.f
              ${SRCLIBTSP}/dbgwri.f
              ${SRCLIBTSP}/dbgwrl.f
              ${SRCLIBTSP}/dcaux.f
              ${SRCLIBTSP}/dcinp.f
              ${SRCLIBTSP}/dcint.f
              ${SRCLIBTSP}/dclin.f
              ${SRCLIBTSP}/dcmod.f
              ${SRCLIBTSP}/dcreg.f
              ${SRCLIBTSP}/dcsort.f
              ${SRCLIBTSP}/deriv.f
              ${SRCLIBTSP}/dwnbak.f
              ${SRCLIBTSP}/endo.f
              ${SRCLIBTSP}/endsum.f
              ${SRCLIBTSP}/eqvsec.f
              ${SRCLIBTSP}/erexit.f
              ${SRCLIBTSP}/err_exit.f
              ${SRCLIBTSP}/expnt.f
              ${SRCLIBTSP}/ffread.f
              ${SRCLIBTSP}/filhis.f
              ${SRCLIBTSP}/freqc.f
              ${SRCLIBTSP}/fxdec.f
              ${SRCLIBTSP}/gaminp.f
              ${SRCLIBTSP}/gamint.f
              ${SRCLIBTSP}/gamsol.f
              ${SRCLIBTSP}/gdifmd.f
              ${SRCLIBTSP}/gdifot.f
              ${SRCLIBTSP}/gdifrd.f
              ${SRCLIBTSP}/gencur.f
              ${SRCLIBTSP}/gendrp.f
              ${SRCLIBTSP}/genname.f
              ${SRCLIBTSP}/genout.f
              ${SRCLIBTSP}/genupd.f
              ${SRCLIBTSP}/gesigl.f
              ${SRCLIBTSP}/getfex.f
              ${SRCLIBTSP}/getflcs.f
              ${SRCLIBTSP}/getfnam.f
              ${SRCLIBTSP}/getfx1.f
              ${SRCLIBTSP}/gethis.f
              ${SRCLIBTSP}/getids.f
              ${SRCLIBTSP}/getmat.f
              ${SRCLIBTSP}/getpfn.f
              ${SRCLIBTSP}/getswn.f
              ${SRCLIBTSP}/get_value.f
              ${SRCLIBTSP}/getyeq.f
              ${SRCLIBTSP}/govdb1.f
              ${SRCLIBTSP}/govdb2.f
              ${SRCLIBTSP}/govinp.f
              ${SRCLIBTSP}/govint.f
              ${SRCLIBTSP}/govsol.f
              ${SRCLIBTSP}/gtswdta.f
              ${SRCLIBTSP}/hivolt.f
              ${SRCLIBTSP}/ibelng3.f
              ${SRCLIBTSP}/ifunit.f
              ${SRCLIBTSP}/igensr.f
              ${SRCLIBTSP}/inamar.f
              ${SRCLIBTSP}/inam.f
              ${SRCLIBTSP}/indrop.f
              ${SRCLIBTSP}/inithis.f
              ${SRCLIBTSP}/initl1.f
              ${SRCLIBTSP}/initl2.f
              ${SRCLIBTSP}/initl3.f
              ${SRCLIBTSP}/initl4.f
              ${SRCLIBTSP}/innam5.f
              ${SRCLIBTSP}/innm8a.f
              ${SRCLIBTSP}/inp3fa.f
              ${SRCLIBTSP}/inp3fb.f
              ${SRCLIBTSP}/inp3fc.f
              ${SRCLIBTSP}/inp3fd.f
              ${SRCLIBTSP}/inp3fe.f
              ${SRCLIBTSP}/inp3ff.f
              ${SRCLIBTSP}/inp3fg.f
              ${SRCLIBTSP}/inp3fh.f
              ${SRCLIBTSP}/inp3fj.f
              ${SRCLIBTSP}/inp3fk.f
              ${SRCLIBTSP}/inp3fl.f
              ${SRCLIBTSP}/input1.f
              ${SRCLIBTSP}/input2.f
              ${SRCLIBTSP}/input3.f
              ${SRCLIBTSP}/int3fa.f
              ${SRCLIBTSP}/int3fb.f
              ${SRCLIBTSP}/int3fc.f
              ${SRCLIBTSP}/int3fd.f
              ${SRCLIBTSP}/int3fe.f
              ${SRCLIBTSP}/int3ff.f
              ${SRCLIBTSP}/int3fg.f
              ${SRCLIBTSP}/int3fh.f
              ${SRCLIBTSP}/int3fj.f
              ${SRCLIBTSP}/int3fk.f
              ${SRCLIBTSP}/int3fl.f
              ${SRCLIBTSP}/intch4.f
              ${SRCLIBTSP}/irange.f
              ${SRCLIBTSP}/jpinfo.f
              ${SRCLIBTSP}/keybrd.f
              ${SRCLIBTSP}/kmpcord.f
              ${SRCLIBTSP}/komp31.f
              ${SRCLIBTSP}/komp_dip.f
              ${SRCLIBTSP}/komp_frpt.f
              ${SRCLIBTSP}/kompr.f
              ${SRCLIBTSP}/lastch.f
              ${SRCLIBTSP}/linout.f
              ${SRCLIBTSP}/linsum.f
              ${SRCLIBTSP}/lldrop.f
              ${SRCLIBTSP}/loadrp.f
              ${SRCLIBTSP}/lodcur.f
              ${SRCLIBTSP}/lodinp.f
              ${SRCLIBTSP}/lodint.f
              ${SRCLIBTSP}/lodnum.f
              ${SRCLIBTSP}/lschk.f
              ${SRCLIBTSP}/lserch.f
              ${SRCLIBTSP}/lsrch.f
              ${SRCLIBTSP}/lsread.f
              ${SRCLIBTSP}/matmod.f
              ${SRCLIBTSP}/maxmin.f
              ${SRCLIBTSP}/mdcinp.f
              ${SRCLIBTSP}/mdcint.f
              ${SRCLIBTSP}/mdclin.f
              ${SRCLIBTSP}/mdcreg.f
              ${SRCLIBTSP}/miint.f
              ${SRCLIBTSP}/mmodin.f
              ${SRCLIBTSP}/modinp.f
              ${SRCLIBTSP}/modint.f
              ${SRCLIBTSP}/mpost.f
              ${SRCLIBTSP}/mvdcde.f
              ${SRCLIBTSP}/mvdcx.f
              ${SRCLIBTSP}/mvmod.f
              ${SRCLIBTSP}/mvplt.f
              ${SRCLIBTSP}/nambas.f
              ${SRCLIBTSP}/nambse.f
              ${SRCLIBTSP}/ndcout.f
              ${SRCLIBTSP}/newtsl.f
              ${SRCLIBTSP}/nout1.f
              ${SRCLIBTSP}/nout2.f
              ${SRCLIBTSP}/nxtwrd.f
              ${SRCLIBTSP}/opaux.f
              ${SRCLIBTSP}/open_file.f
              ${SRCLIBTSP}/openpf.f
              ${SRCLIBTSP}/opents.f
              ${SRCLIBTSP}/pieqiv.f
              ${SRCLIBTSP}/pieqix.f
              ${SRCLIBTSP}/piequi.f
              ${SRCLIBTSP}/piqui1.f
              ${SRCLIBTSP}/plt2v.f
              ${SRCLIBTSP}/pltcom.f
              ${SRCLIBTSP}/plt.f
              ${SRCLIBTSP}/prgmon.f
              ${SRCLIBTSP}/proc_dip.f
              ${SRCLIBTSP}/proc_sdf.f
              ${SRCLIBTSP}/proerr.f
              ${SRCLIBTSP}/prterr.f
              ${SRCLIBTSP}/prtpkg.f
              ${SRCLIBTSP}/prtresid.f
              ${SRCLIBTSP}/prttb.f
              ${SRCLIBTSP}/prtwst.f
              ${SRCLIBTSP}/puterr.f
              ${SRCLIBTSP}/puthisc.f
              ${SRCLIBTSP}/puthisf.f
              ${SRCLIBTSP}/puthisi.f
              ${SRCLIBTSP}/puthisrc.f
              ${SRCLIBTSP}/puthisrf.f
              ${SRCLIBTSP}/puthisri.f
              ${SRCLIBTSP}/puthisw.f
              ${SRCLIBTSP}/putout.f
              ${SRCLIBTSP}/qiksrt.f
              ${SRCLIBTSP}/r1inp.f
              ${SRCLIBTSP}/r1int.f
              ${SRCLIBTSP}/r1sol.f
              ${SRCLIBTSP}/rbinp.f
              ${SRCLIBTSP}/rbint.f
              ${SRCLIBTSP}/rcinp.f
              ${SRCLIBTSP}/rdbse.f
              ${SRCLIBTSP}/rdbsemvr.f
              ${SRCLIBTSP}/rdbsemvs.f
              ${SRCLIBTSP}/rdbsetr.f
              ${SRCLIBTSP}/rdbsets.f
              ${SRCLIBTSP}/rdinp.f
              ${SRCLIBTSP}/rdint.f
              ${SRCLIBTSP}/rdot.f
              ${SRCLIBTSP}/rdpltop.f
              ${SRCLIBTSP}/rdprtbse.f
              ${SRCLIBTSP}/rdsimop.f
              ${SRCLIBTSP}/rdsol.f
              ${SRCLIBTSP}/readid.f
              ${SRCLIBTSP}/readin.f
              ${SRCLIBTSP}/recn.f
              ${SRCLIBTSP}/redecq.f
              ${SRCLIBTSP}/redecs.f
              ${SRCLIBTSP}/reduce.f
              ${SRCLIBTSP}/relay.f
              ${SRCLIBTSP}/repet1.f
              ${SRCLIBTSP}/rginp.f
              ${SRCLIBTSP}/rgint.f
              ${SRCLIBTSP}/rgsol.f
              ${SRCLIBTSP}/ritecc.f
              ${SRCLIBTSP}/ritecp.f
              ${SRCLIBTSP}/ritecq.f
              ${SRCLIBTSP}/ritecs.f
              ${SRCLIBTSP}/rlinp.f
              ${SRCLIBTSP}/rlint1.f
              ${SRCLIBTSP}/rlint2.f
              ${SRCLIBTSP}/rlread.f
              ${SRCLIBTSP}/rlsol.f
              ${SRCLIBTSP}/rmargn.f
              ${SRCLIBTSP}/rminp.f
              ${SRCLIBTSP}/rmint.f
              ${SRCLIBTSP}/rmsol.f
              ${SRCLIBTSP}/rrinp.f
              ${SRCLIBTSP}/rrint.f
              ${SRCLIBTSP}/rrsol.f
              ${SRCLIBTSP}/rsinp.f
              ${SRCLIBTSP}/rsint.f
              ${SRCLIBTSP}/rssol.f
              ${SRCLIBTSP}/ruinp.f
              ${SRCLIBTSP}/ruint.f
              ${SRCLIBTSP}/rusol.f
              ${SRCLIBTSP}/rvint.f
              ${SRCLIBTSP}/rvread.f
              ${SRCLIBTSP}/rvsol.f
              ${SRCLIBTSP}/rw_main.f
              ${SRCLIBTSP}/savfil.f
              ${SRCLIBTSP}/scal.f
              ${SRCLIBTSP}/sdata.f
              ${SRCLIBTSP}/sdclin.f
              ${SRCLIBTSP}/sdcreg.f
              ${SRCLIBTSP}/sect.f
              ${SRCLIBTSP}/shdinp.f
              ${SRCLIBTSP}/shdsol.f
              ${SRCLIBTSP}/sho_arry.f
              ${SRCLIBTSP}/solfa.f
              ${SRCLIBTSP}/solfb.f
              ${SRCLIBTSP}/solfc.f
              ${SRCLIBTSP}/solfd.f
              ${SRCLIBTSP}/solfe.f
              ${SRCLIBTSP}/solff.f
              ${SRCLIBTSP}/solfg.f
              ${SRCLIBTSP}/solfh.f
              ${SRCLIBTSP}/solfj.f
              ${SRCLIBTSP}/solfk.f
              ${SRCLIBTSP}/solfl.f
              ${SRCLIBTSP}/solgovn.f
              ${SRCLIBTSP}/soln.f
              ${SRCLIBTSP}/sort_dip.f
              ${SRCLIBTSP}/sort_frpt.f
              ${SRCLIBTSP}/spdcde.f
              ${SRCLIBTSP}/sptout.f
              ${SRCLIBTSP}/sptplt.f
              ${SRCLIBTSP}/ssinit.f
              ${SRCLIBTSP}/ssinp.f
              ${SRCLIBTSP}/ssort.f
              ${SRCLIBTSP}/sssolv.f
              ${SRCLIBTSP}/ssupdt.f
              ${SRCLIBTSP}/stabdat.f
              ${SRCLIBTSP}/stime.f
              ${SRCLIBTSP}/sumufl.f
              ${SRCLIBTSP}/svsinp.f
              ${SRCLIBTSP}/svsint.f
              ${SRCLIBTSP}/svssol.f
              ${SRCLIBTSP}/svsss1.f
              ${SRCLIBTSP}/svsss2.f
              ${SRCLIBTSP}/swap31.f
              ${SRCLIBTSP}/swap_dip.f
              ${SRCLIBTSP}/swap_frpt.f
              ${SRCLIBTSP}/swingm.f
              ${SRCLIBTSP}/tapewk.f
              ${SRCLIBTSP}/target.f
              ${SRCLIBTSP}/trphis.f
              ${SRCLIBTSP}/tslinp.f
              ${SRCLIBTSP}/tslsol.f
              ${SRCLIBTSP}/turbinp.f
              ${SRCLIBTSP}/turbint.f
              ${SRCLIBTSP}/turbsol.f
              ${SRCLIBTSP}/tzlag.f
              ${SRCLIBTSP}/tzldlg.f
              ${SRCLIBTSP}/tzlead.f
              ${SRCLIBTSP}/upcase.f
              ${SRCLIBTSP}/updt_dip.f
              ${SRCLIBTSP}/varfmt.f
              ${SRCLIBTSP}/vfhist.f
              ${SRCLIBTSP}/vtchk.f
              ${SRCLIBTSP}/vtran.f
              ${SRCLIBTSP}/vymdi.f
              ${SRCLIBTSP}/vymds.f
              ${SRCLIBTSP}/vysol.f
              ${SRCLIBTSP}/wecc.f
              ${SRCLIBTSP}/wecn.f
              ${SRCLIBTSP}/wgacal.f
              ${SRCLIBTSP}/wgfcal.f
              ${SRCLIBTSP}/wgscal.f
              ${SRCLIBTSP}/wgvcal.f
              ${SRCLIBTSP}/whrec1.f
              ${SRCLIBTSP}/write.f
              ${SRCLIBTSP}/writmp.f
              ${SRCLIBTSP}/wrthis.f
              ${SRCLIBTSP}/wrtver.f
              ${SRCLIBTSP}/wstfeq.f
              ${SRCLIBTSP}/wstvlt.f
              ${SRCLIBTSP}/xdate.f
              ${SRCLIBTSP}/xtime.f
              ${SRCLIBTSP}/znmat.f
              ${SRCLIBTSP}/znoinp.f
              ${SRCLIBTSP}/znoint.f
              ${SRCLIBTSP}/znosol.f
)
INCLUDE_DIRECTORIES(${SRCIPF})
ADD_LIBRARY(${TSPLIB} STATIC ${LIBTSP_src})
