# Add the source files
SET(CUTTING_src ${SRCCUTTING}/cutting.f)

# Define the executable in terms of the source files
ADD_EXECUTABLE(${CUTTINGEXE} ${CUTTING_src})

TARGET_LINK_LIBRARIES(${CUTTINGEXE} ${IPFLIB} ${IPCLIB})

IF(WIN32)
    SET(CMAKE_INSTALL_PREFIX "C:\\Program Files")
ELSE()
    SET(CMAKE_INSTALL_PREFIX /usr/local)
ENDIF(WIN32)
INSTALL(TARGETS ${CUTTINGEXE} RUNTIME DESTINATION bin)
