# Add the source files
SET(GUI_src ${SRCGUI}/gui.c)

# Define the executable in terms of the source files
ADD_EXECUTABLE(${GUIEXE} ${GUI_src})

TARGET_LINK_LIBRARIES(${GUIEXE} ${IPCLIB} ${IPFGUILIB} Mrm Xm Xmu Xt Xext X11 SM ICE)

IF(WIN32)
    SET(CMAKE_INSTALL_PREFIX "C:\\Program Files")
ELSE()
    SET(CMAKE_INSTALL_PREFIX /usr/local)
ENDIF(WIN32)
INCLUDE_DIRECTORIES(${SRCIPFUTIL})
INSTALL(TARGETS ${GUIEXE} RUNTIME DESTINATION bin)
