# Add the source files
SET(IPFPLOT_src ${SRCBPF}/ipfplot.c)

# Define the executable in terms of the source files
ADD_EXECUTABLE(${IPFPLOTEXE} ${IPFPLOT_src})

TARGET_LINK_LIBRARIES(${IPFPLOTEXE} ${IPFLIB} ${IPFUTILLIB} ${IPCLIB})

IF(WIN32)
    SET(CMAKE_INSTALL_PREFIX "C:\\Program Files")
ELSE()
    SET(CMAKE_INSTALL_PREFIX /usr/local)
ENDIF(WIN32)
INSTALL(TARGETS ${IPFPLOTEXE} RUNTIME DESTINATION bin)
